9 add endpoint to return config with current time (#10)
* chore(9): resolve conflicts

* feat: integrated new config endpoint

* test(9): add generalised unit tests for getConfig.

* docs(9): added setup for cargo lambda / openapi

* docs(9): some small adjustments

* refactor: code review

* test(9): add acceptance tests for getConfig + refactoring

---------
